--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,3 +3,20 @@
 @import "tailwindcss/utilities";
 
 /* This file is for your main application CSS */
+
+.help-block {
+  color: red;
+  text-transform: capitalize;
+  position: absolute;
+  top: 47px;
+  left: 0;
+}
+
+.form-group {
+  position: relative;
+  margin-bottom: 25px;
+}
+
+select {
+  display: block !important;
+}
