--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -8,8 +8,12 @@
   color: red;
   text-transform: capitalize;
   position: absolute;
-  top: 47px;
   left: 0;
+  top: 47px;
+}
+
+.input-field {
+  position: relative;
 }
 
 .form-group {
