--- a/lib/bookify_web/components/layouts/app.html.heex
+++ b/lib/bookify_web/components/layouts/app.html.heex
@@ -13,16 +13,19 @@
       <li>
         <%= link("Lists", to: Routes.book_path(@conn, :index)) %>
       </li>
-      <%= if @conn.assigns[:user] do %>
+      <%= if @conn.assigns[:current_user] do %>
         <li>
           <%= link("My Account", to: Routes.book_path(@conn, :index)) %>
         </li>
         <li>
-          <%= link("Sign Out", to: Routes.book_path(@conn, :index)) %>
+          <%= link("Sign Out", to: Routes.auth_path(@conn, :signout), method: :delete) %>
         </li>
       <% else %>
         <li>
-          <%= link("Sign In", to: Routes.book_path(@conn, :index)) %>
+          <%= link("Sign In", to: Routes.auth_path(@conn, :new)) %>
+        </li>
+        <li>
+          <%= link("Register", to: Routes.user_path(@conn, :new)) %>
         </li>
       <% end %>
     </ul>
