--- a/lib/bookify_web/controllers/book_html/index.html.heex
+++ b/lib/bookify_web/controllers/book_html/index.html.heex
@@ -2,17 +2,33 @@
 
 <ul class="collection">
   <%= for book <- @books do %>
-    <li class="collection-item">
-      <%= link book.title, to: Routes.book_path(@conn, :show, book.id) %>
-      <div class="right">
-        <%= link "Edit", to: Routes.book_path(@conn, :edit, book.id) %>
-        <%= link "Delete", to: Routes.book_path(@conn, :delete, book.id), method: :delete %>
-      </div>
+    <li class="collection-item avatar">
+      <img src={book.cover_pic_url} alt={book.title <> " cover picture"} class="circle">
+      <span>
+        <%= link book.title, to: Routes.book_path(@conn, :show, book.id), class: "title" %>
+      </span>
+      <p>
+        <%= book.author.name %>
+      </p>
+      <p>
+        <%= book.page_count %> pages
+      </p>
+      <p>
+        Published: <%= book.publish_year %>
+      </p>
+      <%= if RequireAdmin.user_is_admin?(@conn.assigns.current_user) do %>
+        <div class="right">
+          <%= link "Edit", to: Routes.book_path(@conn, :edit, book.id) %>
+          <%= link "Delete", to: Routes.book_path(@conn, :delete, book.id), method: :delete %>
+        </div>
+      <% end %>
     </li>
   <% end %>
 </ul>
 
-<div class="right">
-  <%= link "Add book", to: Routes.book_path(@conn, :new), class: "btn" %>
-</div>
+<%= if RequireAdmin.user_is_admin?(@conn.assigns.current_user) do %>
+  <div class="right">
+    <%= link "Add book", to: Routes.book_path(@conn, :new), class: "btn" %>
+  </div>
+<% end %>
 
