--- a/lib/bookify_web/controllers/author_html/edit.html.heex
+++ b/lib/bookify_web/controllers/author_html/edit.html.heex
@@ -5,7 +5,7 @@
       <%= error_tag f, :name %>
     </div>
     <div class="input-field">
-      <%= number_input f, :birth_year, placeholder: "Birth_year", class: "form-control" %>
+      <%= number_input f, :birth_year, placeholder: "Birth Year", class: "form-control" %>
       <%= error_tag f, :birth_year %>
     </div>
     <div class="input-field">
@@ -13,11 +13,11 @@
       <%= error_tag f, :bio %>
     </div>
     <div class="input-field">
-      <%= text_input f, :author_pic_url, placeholder: "Author picture url", class: "form-control" %>
+      <%= text_input f, :author_pic_url, placeholder: "Author picture URL", class: "form-control" %>
       <%= error_tag f, :author_pic_url %>
     </div>
     <div class="input-field">
-      <%= text_input f, :wikipedia_url, placeholder: "Wikipedia url", class: "form-control" %>
+      <%= text_input f, :wikipedia_url, placeholder: "Wikipedia URL", class: "form-control" %>
       <%= error_tag f, :wikipedia_url %>
     </div>
   </div>
