--- a/lib/bookify_web/controllers/book_html/show.html.heex
+++ b/lib/bookify_web/controllers/book_html/show.html.heex
@@ -1,1 +1,23 @@
+<img src={@book.cover_pic_url}>
 <%= @book.title %>
+<br>
+Author: <%= link @book.author.name, to: Routes.author_path(@conn, :show, @book.author.id) %>
+<br>
+Year: <%= @book.publish_year %>
+<br>
+Pages: <%= @book.page_count %>
+<br>
+Genere:
+<ul>
+<%= for genre <- @book.genre do %>
+  <li>
+    <%= genre %> 
+  </li>
+<% end %>
+</ul>
+<br>
+<h5>
+Description:
+</h5>
+<p> <%= @book.anotation %> </p>
+
