--- a/lib/bookify_web/controllers/author_html/index.html.heex
+++ b/lib/bookify_web/controllers/author_html/index.html.heex
@@ -5,17 +5,19 @@
     <li class="collection-item avatar">
       <img src={author.author_pic_url} alt={author.name <> " picture"} class="circle">
       <span>
+      <%= if RequireAdmin.user_is_admin?(@conn.assigns.current_user) do %>
+        <div class="right">
+          <%= link "Edit", to: Routes.author_path(@conn, :edit, author.id) %>
+          <%= link "Delete", to: Routes.author_path(@conn, :delete, author.id),
+          method: :delete, 
+          data: [confirm: "Are you sure?"] %>
+        </div>
+      <% end %>
         <%= link author.name, to: Routes.author_path(@conn, :show, author.id), class: "title" %>
       </span>
       <p>
         <%= author.birth_year %>
       </p>
-      <%= if RequireAdmin.user_is_admin?(@conn.assigns.current_user) do %>
-        <div class="right">
-          <%= link "Edit", to: Routes.author_path(@conn, :edit, author.id) %>
-          <%= link "Delete", to: Routes.author_path(@conn, :delete, author.id), method: :delete %>
-        </div>
-      <% end %>
     </li>
   <% end %>
 </ul>
