--- a/lib/bookify_web/controllers/book_html/index.html.heex
+++ b/lib/bookify_web/controllers/book_html/index.html.heex
@@ -10,7 +10,9 @@
       <%= if RequireAdmin.user_is_admin?(@conn.assigns.current_user) do %>
         <div class="right">
           <%= link "Edit", to: Routes.book_path(@conn, :edit, book.id) %>
-          <%= link "Delete", to: Routes.book_path(@conn, :delete, book.id), method: :delete %>
+          <%= link "Delete", to: Routes.book_path(@conn, :delete, book.id), 
+          method: :delete, 
+          data: [confirm: "Are you sure?"] %>
         </div>
       <% end %>
       <p>
