--- a/lib/bookify_web/controllers/user_html/new.html.heex
+++ b/lib/bookify_web/controllers/user_html/new.html.heex
@@ -1,4 +1,4 @@
-<h2>Register</h2>
+<h2>Edit Profile</h2>
 
 <div class="form-group"> 
     <%= form_for @changeset, Routes.user_path(@conn, :create), fn f -> %>
