Minor text fixes

--- a/lib/bookify_web/controllers/book_html/index.html.heex
+++ b/lib/bookify_web/controllers/book_html/index.html.heex
@@ -19,10 +19,10 @@
         <%= book.author.name %>
       </p>
       <p>
-        <%= book.page_count %> pages
+        Published: <%= book.publish_year %>
       </p>
       <p>
-        Published: <%= book.publish_year %>
+        Pages: <%= book.page_count %>
       </p>
     </li>
   <% end %>
