--- a/lib/bookify_web/controllers/book_html/new.html.heex
+++ b/lib/bookify_web/controllers/book_html/new.html.heex
@@ -17,8 +17,7 @@
       <%= error_tag f, :page_count %>
     </div>
     <div class="input-field">
-      <%= array_input f, :genre %>
-      <%= array_add_button f, :genre %>
+      <%= text_input f, :genre, placeholder: "Genre", class: "form-control" %>
       <%= error_tag f, :genre %>
     </div>
     <div class="input-field">
