--- a/lib/bookify_web/controllers/book_html/show.html.heex
+++ b/lib/bookify_web/controllers/book_html/show.html.heex
@@ -7,14 +7,8 @@ Year: <%= @book.publish_year %>
 <br>
 Pages: <%= @book.page_count %>
 <br>
-Genere:
-<ul>
-<%= for genre <- @book.genre do %>
-  <li>
-    <%= genre %> 
-  </li>
-<% end %>
-</ul>
+Genres:
+<%= if @book.genre == nil, do: '', else: Enum.join(@book.genre, ", ") %>
 <br>
 <h5>
 Description:
