Display user book list

--- a/lib/bookify_web/components/layouts/app.html.heex
+++ b/lib/bookify_web/components/layouts/app.html.heex
@@ -12,7 +12,7 @@
       </li>
       <%= if @conn.assigns[:current_user] do %>
         <li>
-          <%= link("Lists", to: Routes.book_path(@conn, :index)) %>
+          <%= link("Lists", to: Routes.list_path(@conn, :index)) %>
         </li>
         <li>
           <%= link("My Account", to: Routes.account_path(@conn, :index)) %>
