--- a/lib/bookify_web/controllers/book_html/index.html.heex
+++ b/lib/bookify_web/controllers/book_html/index.html.heex
@@ -7,7 +7,7 @@
       <span>
         <%= link book.title, to: Routes.book_path(@conn, :show, book.id), class: "title" %>
       </span>
-      <%= if RequireAdmin.user_is_admin?(@conn.assigns.current_user) do %>
+      <%= if RequireAdmin.user_is_admin?(current_user(@conn)) do %>
         <div class="right">
           <%= link "Edit", to: Routes.book_path(@conn, :edit, book.id) %>
           <%= link "Delete", to: Routes.book_path(@conn, :delete, book.id), 
@@ -28,7 +28,7 @@
   <% end %>
 </ul>
 
-<%= if RequireAdmin.user_is_admin?(@conn.assigns.current_user) do %>
+<%= if RequireAdmin.user_is_admin?(current_user(@conn)) do %>
   <div class="right">
     <%= link "Add book", to: Routes.book_path(@conn, :new), class: "btn" %>
   </div>
