--- a/lib/bookify_web/controllers/list_html/show.html.heex
+++ b/lib/bookify_web/controllers/list_html/show.html.heex
@@ -1,4 +1,4 @@
-<img src={@book.cover_pic_url}>
+<%!-- <img src={@book.cover_pic_url}>
 <%= @book.title %>
 <br>
 Author: <%= link @book.author.name, to: Routes.author_path(@conn, :show, @book.author.id) %>
@@ -13,5 +13,5 @@ Genres:
 <h5>
 Description:
 </h5>
-<p> <%= @book.anotation %> </p>
+<p> <%= @book.anotation %> </p> --%>
 
