Add avatars to users

--- a/lib/bookify_web/controllers/account_html/edit_profile.html.heex
+++ b/lib/bookify_web/controllers/account_html/edit_profile.html.heex
@@ -1,5 +1,13 @@
 <h2>Edit Profile</h2>
 
+<%= if @current_user.avatar do %>
+  <div class="row">
+    <div class="col s3">
+      <img class="circle right" src={Bookify.Avatar.url({@current_user.avatar, @current_user}, signed: true)}>
+    </div>
+  </div>
+<% end %>
+
 <div class="form-group"> 
     <%= form_for @changeset, Routes.account_path(@conn, :update_profile), fn f -> %>
         <div class="input-field">
@@ -13,3 +21,22 @@
         <%= submit "Save Changes", class: "btn btn-primary" %>
     <% end %>
 </div>
+
+<h4>Change Avatar</h4>
+
+<%= form_for @avatar_changeset, Routes.account_path(@conn, :update_avatar), [multipart: true], fn f -> %>
+  <%= if @avatar_changeset.action do %>
+    <div class="alert alert-danger">
+      <p>Oops, something went wrong! Please check the errors below.</p>
+    </div>
+  <% end %>
+
+  <div class="form-group">
+    <%= file_input f, :avatar %>
+    <%= error_tag f, :avatar %>
+  </div>
+
+  <div>
+    <%= submit "Upload avatar", class: "btn btn-primary" %>
+  </div>
+<% end %>
