--- a/lib/bookify_web/controllers/author_html/index.html.heex
+++ b/lib/bookify_web/controllers/author_html/index.html.heex
@@ -24,7 +24,7 @@
 
 <%= if RequireAdmin.user_is_admin?(current_user(@conn)) do %>
   <div class="right">
-  <%= link "Add author", to: Routes.author_path(@conn, :new), class: "btn" %>
+  <%= link "Add author", to: Routes.author_path(@conn, :new), class: default_btn %>
   </div>
 <% end %>
 
