--- a/lib/bookify_web/controllers/book_html/new.html.heex
+++ b/lib/bookify_web/controllers/book_html/new.html.heex
@@ -33,5 +33,5 @@
     </div>
   </div>
 
-  <%= submit "Save Book", class: "btn btn-primary" %>
+  <%= submit "Save Book", class: default_btn %>
 <% end %>
