--- a/lib/bookify_web/controllers/author_html/edit.html.heex
+++ b/lib/bookify_web/controllers/author_html/edit.html.heex
@@ -22,5 +22,5 @@
     </div>
   </div>
 
-  <%= submit "Save Author", class: default_btn %>
+  <%= submit "Save Author", class: default_btn() %>
 <% end %>
