--- a/lib/bookify_web/controllers/account_html/edit_password.html.heex
+++ b/lib/bookify_web/controllers/account_html/edit_password.html.heex
@@ -24,7 +24,7 @@
         <%= password_input f, :password_confirmation, placeholder: "Confirm password", class: "form-control" %>
         <%= error_tag f, :password_confirmation %>
     </div>
-    <%= submit "Change Password", class: default_btn %>
-    <%= link "Cancel", to: Routes.account_path(@conn, :index), class: cancel_btn %>
+    <%= submit "Change Password", class: default_btn() %>
+    <%= link "Cancel", to: Routes.account_path(@conn, :index), class: cancel_btn() %>
 </div>
 <% end %>
