--- a/lib/bookify_web/controllers/user_html/new.html.heex
+++ b/lib/bookify_web/controllers/user_html/new.html.heex
@@ -28,6 +28,6 @@
             <%= password_input f, :password_confirmation, placeholder: "Confirm password", class: "form-control" %>
             <%= error_tag f, :password_confirmation %>
         </div>
-        <%= submit "Register", class: default_btn %>
+        <%= submit "Register", class: default_btn() %>
     <% end %>
 </div>
