Refactor time and review book links

--- a/lib/bookify_web/components/layouts/admin.html.heex
+++ b/lib/bookify_web/components/layouts/admin.html.heex
@@ -1,6 +1,6 @@
 <nav class="blue darken-2">
   <div class="nav wrapper container">
-    <a href="/" class="brand-logo">Admin Panel</a>
+    <a href="/admin" class="brand-logo">Admin Panel</a>
     <a href="#" class="sidenav-trigger" data-target="mobile-nav">
 			<i class="material-icons">menu</i>
 		</a>
