--- a/lib/bookify_web/controllers/admin_html/reviews.html.heex
+++ b/lib/bookify_web/controllers/admin_html/reviews.html.heex
@@ -2,7 +2,12 @@
   <%= for review <- @reviews do %>
     <li class="collection-item avatar">
       <img src={Bookify.Avatar.url({review.user.avatar, review.user}, signed: true)} alt={review.user.name <> " profile picture"} class="circle">
+      <h6>
+        <%= link "For: " <> review.book.title, to: Routes.book_path(@conn, :show, review.book.id) %>
+      </h6>
       <p class="right">
+        <%= from_now(review.inserted_at) %>
+        <br>
         <%= display_date(review.inserted_at) %>
         <br>
         <%= display_time(review.inserted_at) %>
